# BattelShip

./: CMakeLists.txt  README.md  auth.c  auth.h  battle  battle.c  battleship_ui  battleship_ui.c  client  client.c  login  login.c  main_menu  main_menu.c  place_ship  place_ship.c  protocol.h  server  server.c  temp  temp.c  ui.c  ui.h  user_data.txt
controller/: login.c  login.h  register.c  register.h  ship_placement.c  ship_placement.h
model/: auth.c  auth.h  board.c  board.h  match.c  match.h  network.c  network.h
ui/: ui.c
view/: base_view.c  base_view.h  fire_result_view.c  fire_result_view.h  home_view.c  home_view.h  login_view.c  login_view.h  menu_view.c  menu_view.h  placeship_view.c  placeship_view.h  play_view.c  play_view.h  register_view.c  register_view.h  result_view.c  result_view.h  temp.c  temp.h
